--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
 
         body {
-            background: linear-gradient(135deg, #186DB3 0%, #3997e4 100%);
+            background: linear-gradient(135deg, #186DB3 0%, #000000 100%);
             min-height: 100vh;
             display: flex;
             justify-content: center;
